# advent-of-code

./: .env  README.md  ROADMAP.md  go.work
2015/: README.md  main.py  pyproject.toml  requirements.txt  setup.py
2015/__template__/: __init__.py  __main__.py  run.sh
2015/cli/: __init__.py  __main__.py  utils.py
2015/core/: __init__.py  advent_decorators.py  advent_files.py  advent_types.py  advent_utils.py  utils.py
2015/day-01/: README.md  __main__.py
2015/day_01/: README.md  __init__.py  __main__.py  core.py
2015/day_02/: README.md  __init__.py  __main__.py
2015/day_03/: README.md  __init__.py  __main__.py
2015/day_04/: README.md  __init__.py  __main__.py  output.txt
2015/day_05/: README.md  __init__.py  __main__.py
2015/day_05/data/: test.txt
2015/day_06/: README.md  __init__.py  __main__.py  run.sh
2015/day_07/: README.md  __init__.py  run.sh
2015/day_08/: README.md  __init__.py  run.sh
2016/: README.md  elves  paths.php
2016/cli/: index.php
2016/core/: autoload.php  common.php  files.php
2017/cli/: index.ru
2021/: README.md  go.mod  go.sum  main.go
2021/cli/: cli.go  days_config.go
2021/conf/: days.go
2021/core/: arrays.go  cli.go  polyfill.go  read.go  system.go
2021/day-01/: README.md  main.go  run.sh
2021/day-06/: README.md  main.go  output.txt  run.sh
2021/day-11/: README.md  main.go  run.sh
2021/day-12/: README.md  main.go
2021/day-13/: README.md  main.go  output.txt  run.sh
2021/day-15/: README.md  main.go  run.sh
2022/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
2023/: test.t
(+75 files in other folders)
